horizontal scroll fix

--- a/src/presentation/pages/HomePage/components/Offer/styles.sass
+++ b/src/presentation/pages/HomePage/components/Offer/styles.sass
@@ -69,10 +69,13 @@
 
 @media (min-width: breakpoints.$breakpoint-desktop)
   .offer
+    position: relative
+
     &__content
       display: flex
       flex-direction: column
       align-items: center
+      margin-bottom: 306px
 
     &__title
       font-size: 56px
@@ -86,5 +89,10 @@
       width: 656px
 
     &__carousel
-      width: 100%
+      overflow: hidden
+
+    &__carousel-wrapper
+      position: absolute
+      bottom: 89px
+      max-width: 100%
       overflow: hidden
