--- a/src/presentation/pages/HomePage/components/ProjectsGallery/styles.sass
+++ b/src/presentation/pages/HomePage/components/ProjectsGallery/styles.sass
@@ -165,6 +165,7 @@
     max-width: 1440px
     margin: 0 auto
     gap: 32px
+    overflow: hidden
 
     &__title
       padding: 0 56px
